--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,6 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap');
 @import url('./config.css');
 
+.light{
+    background-image: url(../../assets/img/wave-bg.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition-duration: 0.8s;
+}
+
 main{
     height: 100vh;
     display: flex;
@@ -21,20 +28,20 @@ main{
     align-items: center;
     gap: 10px;
     text-decoration: none;
-    color: #f2f2f2;
+    color: var(--light);
     font-weight: 400;
 }
 
-.container{
+.light-container{
     display: flex;
     justify-content: space-around;
     align-items: center;
     width: 809px;
     height: 360px;
-    background-color: #f2f2f2;
+    background-color: var(--light);
     border-radius: 10px;
     padding: 10px;
-   
+    transition-duration: 0.8s;
 }
 
 .info{
@@ -49,7 +56,7 @@ main{
     max-height: 40px;   
 }
 
-.input-field{
+.light-input-field{
     display: block;
     border: 2px solid transparent;
     margin-top: 4%; 
@@ -61,26 +68,26 @@ main{
     transition: border-color 0.4s;
 }
 
-.input-field:hover,
-.input-field:focus{
-    border-color: #4ECABF;
+.light-input-field:hover,
+.light-input-field:focus{
+    border-color: var(--tea-light);
 }
 
 .check-message{
     font-size: 12px;
 }
 
-.sub-button{
+.light-sub-button{
     background-color: var(--tea-light);
     border: none;
     width: 222px;
     height: 34px;
     margin-top: 30px;
     border-radius: 20px;
-    color: #f2f2f2;
+    color: var(--light)
 }
 
-.sub-button:hover{
+.light-sub-button:hover{
     background-color: #50b6ad;
     transition-duration: 1s;
     cursor: pointer;
@@ -92,11 +99,12 @@ p{
     text-decoration: none;
     margin-top: 20px;
     font-weight: 500;
+    color: #2f2f2f;
 }
 
 .link{
     font-weight: 800;
-    color: #36a89f;
+    color: var(--dark-tea);
 }
 
 aside{
@@ -118,4 +126,61 @@ aside{
     background-color: transparent;
     border: none;
     padding: 5px;
+}
+
+.dark{
+    background-image: url(../../assets/img/waves-dark-bg.svg);
+    background-repeat: no-repeat;
+    background-size: cover;
+    transition-duration: 0.8s;
+}
+
+.dark-container{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 809px;
+    height: 360px;
+    background-color: var(--dark-bg);
+    border-radius: 10px;
+    padding: 10px;
+    transition: 0.5s;
+}
+
+.dark-input-field{
+    display: block;
+    border: 2px solid transparent;
+    margin-top: 4%; 
+    padding: 20px;
+    width: 320px;
+    height: 38px;
+    background-color: var(--dark-input);
+    border-radius: 10px;
+    transition: border-color 0.4s;
+    color: #e8e8e8;
+}
+
+.dark-input-field:hover,
+.dark-input-field:focus{
+    border-color: var(--dark-tea);
+}
+
+.dark-sub-button{
+    background-color: var(--dark-tea);
+    border: none;
+    width: 222px;
+    height: 34px;
+    margin-top: 30px;
+    border-radius: 20px;
+    color: #f2f2f2da;
+}
+
+.dark-sub-button:hover{
+    background-color: #5bc9c0;
+    transition-duration: 1s;
+    cursor: pointer;
+}
+
+.not-logged{
+    
 }
